<resources>
    <string name="app_name">PipaRapipa</string>
    <string name="login_username">Username</string>
    <string name="login_email"> Register Email</string>
    <string name="login_password">Password</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="register_username">Register Username</string>
    <string name="register_password">Register Passowrd</string>
    <string name="checkbox">Remember Me</string>
    <string name="login_invalid_credentials_message">Wrong! username or password.</string>
    <string name="login_invalid_credentials_email">Write Email!</string>
    <string name="login_invalid_credentials_username">Write Username!</string>
    <string name="login_invalid_credentials_password">Write Password!</string>
    <string name="login_remember_me">Remember me</string>
    <string name="rusys">Sunu rusys:</string>
    <string name="buldogas">Buldogas</string>
    <string name="spanielius">Spanielius</string>
    <string name="pitbulis">Pitbulis</string>
    <string name="pristatymas">Pristatymas:</string>
    <string name="taip">Taip</string>
    <string name="ne">Ne</string>
    <string name="kaina">Kaina:</string>
    <string name="payment">Atsiskaitymo budas</string>
    <string name="new_entry_database_info">Success</string>
    <string name="country_prompt">Pasirinkti mokejimo buda:</string>
    <string-array name="listas">
        <item>Swedbank</item>
        <item>Luminor</item>
        <item>Revolut</item>
        <item>Siauliu bankas</item>
        <item>SEB</item>
    </string-array>
</resources>
