<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/dog"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DK"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:textSize="20dp"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/rusys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rusys"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:textSize="20dp"
        />

    <CheckBox
        android:id="@+id/pirmas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buldogas" />

    <CheckBox
        android:id="@+id/antras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spanielius"
        android:checked="true" />

    <CheckBox
        android:id="@+id/trecias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pitbulis" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pristatymas"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:textSize="20dp"
        />
    <RadioGroup
        android:id="@+id/new_entry_delivery_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/deliveryyes"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/taip"
            android:checked="false" />
        <RadioButton
            android:id="@+id/deliveryno"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ne"
            android:checked="false" />
    </RadioGroup>

    <TextView
        android:id="@+id/kaina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:textSize="20dp"
        />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/listas"
        android:prompt="@string/country_prompt" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/Grizti"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/button_register" />
</LinearLayout>